--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -17,3 +17,31 @@ jobs:
           password: ${{secrets.DOCKER_PASSWORD}}
           repository: luizholandadocker/go-argocd
           tags: ${{github.sha}}, latest
+  
+  deploy:
+    name: deploy
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      
+      - name: kustomize
+        uses: imranismail/setup-kustomize@v1
+        with:
+          kustomize_version: v3.6.1
+      
+      - name: update k8s
+        run: |
+          cd k8s
+          kustomize editset image goargocdapp=luizholandadocker/go-argocd:${{github.sha}}
+          cat kustomization.yaml
+
+      - name: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "Deploy"
+          git commit -am "Changing tag name"
+      
+      - name: push
+        uses: ad-m/github-push-action@master
